# klee

./: .gitignore  TODO.md
docs/: intro  overview
examples/exgen/: assembly.ll  eosContract1235_mockcontract.c  eosContract1235_mockcontract.ll  helloworld.c  test.c  test_with_sym.ll
examples/exgen/test/: eosContract1235_mockcontract.json  jsonout  plus.ll  test.ll
include/klee/: ExecutionState.h  ModifyLLVM.h
include/klee/Expr/: Expr.h
lib/Basic/: README.txt  Statistics.cpp
lib/Core/: ExecutionState.cpp  Executor.cpp  Executor.h  Memory.h
lib/Expr/: Expr.cpp
lib/Support/: CMakeLists.txt  ModifyLLVM.cpp
test/: CMakeLists.txt
tools/klee/: main.cpp
